# dev-hosts

./: .gitignore  README.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: system.rs
src-tauri/src/core/: error.rs  mod.rs  response.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/convert/: mod.rs
src-tauri/src/modules/crypto/: mod.rs
src-tauri/src/modules/encoding/: mod.rs
src-tauri/src/modules/format/: mod.rs
src-tauri/src/modules/hash/: mod.rs
src-tauri/src/modules/system/: hosts.rs  mod.rs  ports.rs
