[package]
name = "devhosts"
version = "0.1.0"
description = "Developer utility desktop app"
authors = ["DevHosts Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.37"
tauri = { version = "2.0.0", features = [] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"

